sil.output
Terminals unused in grammar

   TRUE
   FALSE
   MODULUS
   AND
   OR
   NOT
   READ
   WRITE
   IF
   THEN
   ELSE
   WHILE
   EQUAL
   ASSIGN
   NEQUAL
   LESS_THAN
   LESS_EQUAL
   GREATER_THAN
   GREATER_EQ
   PLUS
   MINUS
   MULT
   DIVIDE
   RFLOWER
   LFLOWER
   DO
   ENDWHILE
   PRINT
   BEGINN
   RETURN
   RECORD


State 30 conflicts: 1 shift/reduce


Grammar

    0 $accept: prgrm $end

    1 prgrm: declaration

    2 declaration: DECL dstatemnts ENDDECL

    3 dstatemnts: dstatemnt
    4           | dstatemnt dstatemnts

    5 dstatemnt: type dvars

    6 dvars: var SEMICOLON
    7      | var COMMA dvars

    8 type: INTEGER
    9     | BOOLEAN

   10 var: ID
   11    | ID LSQUARE NUMBER RSQUARE
   12    | ID LPAREN parametr RPAREN
   13    | ID LPAREN RPAREN
   14    | ADDRESSOF ID

   15 parametr: type plvars

   16 plvars: pvars SEMICOLON plvars
   17       | pvars

   18 pvars: ID
   19      | ID COMMA plvars
   20      | ADDRESSOF ID


Terminals, with rules where they appear

$end (0) 0
error (256)
DECL (258) 2
ENDDECL (259) 2
SEMICOLON (260) 6 16
COMMA (261) 7 19
INTEGER (262) 8
BOOLEAN (263) 9
ID (264) 10 11 12 13 14 18 19 20
LSQUARE (265) 11
RSQUARE (266) 11
TRUE (267)
FALSE (268)
ADDRESSOF (269) 14 20
MODULUS (270)
AND (271)
OR (272)
NOT (273)
READ (274)
WRITE (275)
IF (276)
THEN (277)
ELSE (278)
WHILE (279)
NUMBER (280) 11
EQUAL (281)
ASSIGN (282)
NEQUAL (283)
LESS_THAN (284)
LESS_EQUAL (285)
GREATER_THAN (286)
GREATER_EQ (287)
PLUS (288)
MINUS (289)
MULT (290)
DIVIDE (291)
LPAREN (292) 12 13
RPAREN (293) 12 13
RFLOWER (294)
LFLOWER (295)
DO (296)
ENDWHILE (297)
PRINT (298)
BEGINN (299)
RETURN (300)
RECORD (301)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
prgrm (48)
    on left: 1, on right: 0
declaration (49)
    on left: 2, on right: 1
dstatemnts (50)
    on left: 3 4, on right: 2 4
dstatemnt (51)
    on left: 5, on right: 3 4
dvars (52)
    on left: 6 7, on right: 5 7
type (53)
    on left: 8 9, on right: 5 15
var (54)
    on left: 10 11 12 13 14, on right: 6 7
parametr (55)
    on left: 15, on right: 12
plvars (56)
    on left: 16 17, on right: 15 16 19
pvars (57)
    on left: 18 19 20, on right: 16 17


state 0

    0 $accept: . prgrm $end

    DECL  shift, and go to state 1

    prgrm        go to state 2
    declaration  go to state 3


state 1

    2 declaration: DECL . dstatemnts ENDDECL

    INTEGER  shift, and go to state 4
    BOOLEAN  shift, and go to state 5

    dstatemnts  go to state 6
    dstatemnt   go to state 7
    type        go to state 8


state 2

    0 $accept: prgrm . $end

    $end  shift, and go to state 9


state 3

    1 prgrm: declaration .

    $default  reduce using rule 1 (prgrm)


state 4

    8 type: INTEGER .

    $default  reduce using rule 8 (type)


state 5

    9 type: BOOLEAN .

    $default  reduce using rule 9 (type)


state 6

    2 declaration: DECL dstatemnts . ENDDECL

    ENDDECL  shift, and go to state 10


state 7

    3 dstatemnts: dstatemnt .
    4           | dstatemnt . dstatemnts

    INTEGER  shift, and go to state 4
    BOOLEAN  shift, and go to state 5

    $default  reduce using rule 3 (dstatemnts)

    dstatemnts  go to state 11
    dstatemnt   go to state 7
    type        go to state 8


state 8

    5 dstatemnt: type . dvars

    ID         shift, and go to state 12
    ADDRESSOF  shift, and go to state 13

    dvars  go to state 14
    var    go to state 15


state 9

    0 $accept: prgrm $end .

    $default  accept


state 10

    2 declaration: DECL dstatemnts ENDDECL .

    $default  reduce using rule 2 (declaration)


state 11

    4 dstatemnts: dstatemnt dstatemnts .

    $default  reduce using rule 4 (dstatemnts)


state 12

   10 var: ID .
   11    | ID . LSQUARE NUMBER RSQUARE
   12    | ID . LPAREN parametr RPAREN
   13    | ID . LPAREN RPAREN

    LSQUARE  shift, and go to state 16
    LPAREN   shift, and go to state 17

    $default  reduce using rule 10 (var)


state 13

   14 var: ADDRESSOF . ID

    ID  shift, and go to state 18


state 14

    5 dstatemnt: type dvars .

    $default  reduce using rule 5 (dstatemnt)


state 15

    6 dvars: var . SEMICOLON
    7      | var . COMMA dvars

    SEMICOLON  shift, and go to state 19
    COMMA      shift, and go to state 20


state 16

   11 var: ID LSQUARE . NUMBER RSQUARE

    NUMBER  shift, and go to state 21


state 17

   12 var: ID LPAREN . parametr RPAREN
   13    | ID LPAREN . RPAREN

    INTEGER  shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    RPAREN   shift, and go to state 22

    type      go to state 23
    parametr  go to state 24


state 18

   14 var: ADDRESSOF ID .

    $default  reduce using rule 14 (var)


state 19

    6 dvars: var SEMICOLON .

    $default  reduce using rule 6 (dvars)


state 20

    7 dvars: var COMMA . dvars

    ID         shift, and go to state 12
    ADDRESSOF  shift, and go to state 13

    dvars  go to state 25
    var    go to state 15


state 21

   11 var: ID LSQUARE NUMBER . RSQUARE

    RSQUARE  shift, and go to state 26


state 22

   13 var: ID LPAREN RPAREN .

    $default  reduce using rule 13 (var)


state 23

   15 parametr: type . plvars

    ID         shift, and go to state 27
    ADDRESSOF  shift, and go to state 28

    plvars  go to state 29
    pvars   go to state 30


state 24

   12 var: ID LPAREN parametr . RPAREN

    RPAREN  shift, and go to state 31


state 25

    7 dvars: var COMMA dvars .

    $default  reduce using rule 7 (dvars)


state 26

   11 var: ID LSQUARE NUMBER RSQUARE .

    $default  reduce using rule 11 (var)


state 27

   18 pvars: ID .
   19      | ID . COMMA plvars

    COMMA  shift, and go to state 32

    $default  reduce using rule 18 (pvars)


state 28

   20 pvars: ADDRESSOF . ID

    ID  shift, and go to state 33


state 29

   15 parametr: type plvars .

    $default  reduce using rule 15 (parametr)


state 30

   16 plvars: pvars . SEMICOLON plvars
   17       | pvars .

    SEMICOLON  shift, and go to state 34

    SEMICOLON  [reduce using rule 17 (plvars)]
    $default   reduce using rule 17 (plvars)


state 31

   12 var: ID LPAREN parametr RPAREN .

    $default  reduce using rule 12 (var)


state 32

   19 pvars: ID COMMA . plvars

    ID         shift, and go to state 27
    ADDRESSOF  shift, and go to state 28

    plvars  go to state 35
    pvars   go to state 30


state 33

   20 pvars: ADDRESSOF ID .

    $default  reduce using rule 20 (pvars)


state 34

   16 plvars: pvars SEMICOLON . plvars

    ID         shift, and go to state 27
    ADDRESSOF  shift, and go to state 28

    plvars  go to state 36
    pvars   go to state 30


state 35

   19 pvars: ID COMMA plvars .

    $default  reduce using rule 19 (pvars)


state 36

   16 plvars: pvars SEMICOLON plvars .

    $default  reduce using rule 16 (plvars)
